--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1"
   },
   "name": "latihan_soal_back_end",
   "version": "1.0.0",
